# Tasks

./: .env.example  .gitignore  AGENT_GUIDANCE.md  AGENT_SYSTEM_PROMPT_UPDATE.md  AUDIT_RESULTS.md  CHANGELOG.md  DEPENDENCY_AUDIT.md  ELICITATIONS.md  EPHEMERAL-CLAUDE-WRAPPER-GUIDE.md  FASTMCP-3.0-RESEARCH.md  MCP-QUICKSTART.md  MCP_RESILIENCE_IMPLEMENTATION.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README-IMPLEMENTATION.md  README.md  SOLUTION_MCP_TOOLS_IN_WORKTREES.md  SPEC-SEMANTIC-SEARCH.md  Tasks-project-launch.md  alembic.ini  bootstrap-worktree.sh  initial-tasks.md  pyproject.toml  test_description.txt  test_prompts.py  test_server_prompts.py  updated_description.txt
.github/: copilot-instructions.md
.github/prompts/: delegate-bootstrap.prompt.md
mcp_server/: __init__.py  server.py
migrations/: env.py
migrations/versions/: 858a99479567_add_workspace_path_column.py  9a1b2c3d4e5f_add_autoincrement_to_task_id.py  a1b2c3d4e5f6_create_attachment_table.py  b2c3d4e5f6g7_create_vec_tasks_table.py  e17cb2e34d2f_add_jira_issues_column.py
taskmanager/: __init__.py  __main__.py  attachments.py  backup.py  cli.py  config.py  database.py  mcp_discovery.py  models.py  repository.py  repository_impl.py  service.py  workspace.py
taskmanager/services/: __init__.py  search.py
tests/: __init__.py  test_agent_communication_statuses.py  test_attachment_retrieval.py  test_attachment_stdin.py  test_backup.py  test_backup_integration.py  test_config.py  test_custom_profiles.py  test_file_loading.py  test_integration.py  test_mcp_server.py  test_models.py  test_performance.py  test_profile_integration.py  test_profile_management.py  test_prompt_command.py  test_repository.py  test_service.py
