[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmanager"
version = "0.8.0"
description = "A bespoke CLI task and project management application with MCP server integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Eugene Archibald", email = "eugene.archibald@example.com"}
]
keywords = ["task", "todo", "cli", "productivity", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sqlmodel>=0.0.22",
    "rich>=13.7.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "fastmcp>=3.0.0b1",
    "mcp>=1.23.0",
    "tomli-w>=1.0.0",
    "alembic>=1.13.0",
    "shtab>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
tasks = "taskmanager.cli:main"
tasks-mcp = "mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["taskmanager*", "mcp_server*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument defaults
    "B904",  # raise without from inside except (CLI exits)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=taskmanager",
    "--cov=mcp_server",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
